# Seo-Tool

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  PLAN.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: build.yml
analyzers/: __init__.py  base.py  content.py  scoring.py  structure.py  tech_meta.py
backend/app/: main.py
backend/app/api/: auth.py  crawls.py  issues.py  pages.py  projects.py  reports.py  sitemaps.py
backend/app/core/: settings.py
crawler/: __init__.py  engine.py  external.py  extract.py  fetcher.py  resources.py  robots.py  sitemap.py  spellcheck.py  urls.py
infra/: .dockerignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml
migrations/: env.py
migrations/versions/: 018a435b9e03_initial_schema.py  3c4f8a2b9d12_add_page_redirect_chain.py  7e9ab2c1d4f5_add_sitemap_urls.py  b2d5e8f9a1c0_add_resources_table.py  d3a8b6f2e9c1_uppercase_resource_type_enum.py  f5c1a8d3b2e0_add_project_schedule.py
tests/: conftest.py
tests/integration/: test_comparison_and_csv.py  test_crawl_detail.py  test_crawl_engine.py  test_crawls.py  test_external_check.py  test_health.py  test_projects.py  test_projects_dashboard.py  test_reports.py  test_resource_probe.py  test_scheduler.py  test_sitemap.py  test_sitemaps_api.py  test_spellcheck.py  test_worker_crawl.py
tests/unit/: test_content.py  test_extract.py  test_scoring.py  test_structure.py  test_tech_meta.py  test_urls.py
web/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
worker/: main.py
worker/jobs/: crawl.py  scheduler.py
(+54 files in other folders)
