[project]
name = "seo-tool"
version = "0.1.0"
description = "Self-hosted SEO analysis tool (Seobility-style)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "rq>=1.16",
    "redis>=5.0",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "protego>=0.3",
    "lxml>=5.0",
    "structlog>=24.1",
    "tenacity>=8.2",
    "trafilatura>=1.12",
    "datasketch>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.3",
    "black>=24.0",
    "mypy>=1.9",
    "pre-commit>=3.6",
    "respx>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET"]
ignore = [
    "E501",
    "B008",
    "N806",
    "UP017",
    "UP042",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "worker*", "crawler*", "analyzers*"]
exclude = ["tests*", "infra*", "migrations*"]
